--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,14 +5,15 @@
   }
   
   body {
-    background: #CCFBFE;
-    overflow: hidden;
-    font-family: sans-serif;
+    background: #ffb04c;
+    /* overflow: hidden; */
+    overflow-x: hidden;
+    font-family: Oswald;
   }
   
   .tinder {
     width: 100vw;
-    height: 100vh;
+    height: 90vh;
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -100,6 +101,15 @@
     padding: 0 16px;
     pointer-events: none;
   }
+
+  .tinder--card h4 {
+    margin-top: 32px;
+    font-size: 25px;
+    padding: 0 16px;
+    pointer-events: none;
+    font-weight: bolder;
+    color: #bc5100;
+  }
   
   .tinder--card p {
     margin-top: 24px;
@@ -112,6 +122,7 @@
     flex: 0 0 100px;
     text-align: center;
     padding-top: 20px;
+    z-index: 9999;
   }
   
   .tinder--buttons button {
@@ -140,5 +151,38 @@
   .fa-remove {
     color: #CDD6DD;
   }
+
+  .card-header {
+    padding-top: 30px;
+    color: #f57f17;
+    padding-left: 20px;
+    padding-bottom: 10px;
+    padding-right: 20px;
+  }
+
   
+
+  .btn-store {
+    color: #fff;
+    min-width: 254px;
+    padding: 12px 20px !important;
+    border-color: #dddddd !important;
+  }
   
+  .btn-store:focus, 
+  .btn-store:hover {
+    color: #ffffff !important;
+    background-color: #bc5100;
+    border-color: #bc5100 !important;
+  }
+  
+  .btn-store .btn-label, 
+  .btn-store .btn-caption {
+    display: block;
+    text-align: left;
+    line-height: 1;
+  }
+  
+  .btn-store .btn-caption {
+    font-size: 24px;
+  }
